// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmSignIn renders as expected for SMS challenge 1`] = `
<div>
  
  <div>
    
    
    <form
      data-amplify-authenticator-confirmsignin=""
      data-amplify-form=""
    >
      
      
      <fieldset
        class="amplify-flex amplify-authenticator__column"
        data-amplify-fieldset=""
      >
        
        
        <h3
          class="amplify-heading amplify-heading--3"
          data-amplify-heading=""
        >
          Confirm SMS Code
        </h3>
        
        <div
          class="amplify-flex amplify-authenticator__column"
        >
          
          
          
          <!-- password input -->
          
          <!-- textfield input -->
          <div
            class="amplify-flex amplify-field amplify-textfield amplify-phonenumberfield"
          >
            
            <label
              class="amplify-label"
              data-amplify-label=""
              for="amplify-field-99999"
            >
              
              Code *
              
            </label>
            <div
              class="amplify-flex amplify-field-group"
            >
              
              <div
                class="amplify-field-group__outer-start"
              >
                
                
              </div>
              <div
                class="amplify-field-group__field-wrapper"
              >
                
                <!--Phone input-->
                <input
                  aria-invalid="false"
                  autocapitalize="off"
                  autocomplete=""
                  class="amplify-input amplify-field-group__control"
                  data-amplify-input=""
                  id="amplify-field-99999"
                  name="confirmation_code"
                  placeholder="Code"
                  required=""
                  type="number"
                />
                
              </div>
              
            </div>
            
          </div>
          
          <!-- Validation error, if any -->
          <!--v-if-->
          
          
          
        </div>
        
        <footer
          class="amplify-flex amplify-authenticator__column"
        >
          
          <!--v-if-->
          
          <button
            class="amplify-button amplify-field-group__control amplify-button--primary amplify-field-group__control amplify-authenticator__font"
            data-amplify-button=""
            data-disabled="false"
            data-fullwidth="false"
            data-loading="false"
            data-variation="primary"
            fullwidth="false"
            style="font-weight: normal;"
          >
            
            Confirm
            
          </button>
          
          
          <button
            class="amplify-button amplify-field-group__control amplify-button--link amplify-button--small amplify-field-group__control amplify-authenticator__font"
            data-amplify-button=""
            data-disabled="false"
            data-fullwidth="false"
            data-loading="false"
            data-size="small"
            data-variation="link"
            fullwidth="false"
            style="font-weight: normal;"
            type="button"
          >
            
            Back to Sign In
            
          </button>
          
          
          
          
        </footer>
        
        
      </fieldset>
      
      
    </form>
    
    
  </div>
  
</div>
`;

exports[`ConfirmSignIn renders as expected for TOTP challenge 1`] = `
<div>
  
  <div>
    
    
    <form
      data-amplify-authenticator-confirmsignin=""
      data-amplify-form=""
    >
      
      
      <fieldset
        class="amplify-flex amplify-authenticator__column"
        data-amplify-fieldset=""
      >
        
        
        <h3
          class="amplify-heading amplify-heading--3"
          data-amplify-heading=""
        >
          Confirm TOTP Code
        </h3>
        
        <div
          class="amplify-flex amplify-authenticator__column"
        >
          
          
          
          <!-- password input -->
          
          <!-- textfield input -->
          <div
            class="amplify-flex amplify-field amplify-textfield amplify-phonenumberfield"
          >
            
            <label
              class="amplify-label"
              data-amplify-label=""
              for="amplify-field-99999"
            >
              
              Code *
              
            </label>
            <div
              class="amplify-flex amplify-field-group"
            >
              
              <div
                class="amplify-field-group__outer-start"
              >
                
                
              </div>
              <div
                class="amplify-field-group__field-wrapper"
              >
                
                <!--Phone input-->
                <input
                  aria-invalid="false"
                  autocapitalize="off"
                  autocomplete=""
                  class="amplify-input amplify-field-group__control"
                  data-amplify-input=""
                  id="amplify-field-99999"
                  name="confirmation_code"
                  placeholder="Code"
                  required=""
                  type="number"
                />
                
              </div>
              
            </div>
            
          </div>
          
          <!-- Validation error, if any -->
          <!--v-if-->
          
          
          
        </div>
        
        <footer
          class="amplify-flex amplify-authenticator__column"
        >
          
          <!--v-if-->
          
          <button
            class="amplify-button amplify-field-group__control amplify-button--primary amplify-field-group__control amplify-authenticator__font"
            data-amplify-button=""
            data-disabled="false"
            data-fullwidth="false"
            data-loading="false"
            data-variation="primary"
            fullwidth="false"
            style="font-weight: normal;"
          >
            
            Confirm
            
          </button>
          
          
          <button
            class="amplify-button amplify-field-group__control amplify-button--link amplify-button--small amplify-field-group__control amplify-authenticator__font"
            data-amplify-button=""
            data-disabled="false"
            data-fullwidth="false"
            data-loading="false"
            data-size="small"
            data-variation="link"
            fullwidth="false"
            style="font-weight: normal;"
            type="button"
          >
            
            Back to Sign In
            
          </button>
          
          
          
          
        </footer>
        
        
      </fieldset>
      
      
    </form>
    
    
  </div>
  
</div>
`;
